# CycliST

./: .gitignore  LICENSE.md  README.md  environment.yml  install_blender.sh  install_packages.sh  install_sg_lang.sh  pyproject.toml  setup.py  start_sg_lang.sh
assets/: colors.json  scene.blend  sizes.json
assets/materials/: Metal.blend
assets/prompts/: scene_understanding_map_prompt.txt  su_queries.md  vqa_prompt_attribute.txt  vqa_prompt_boolean.txt  vqa_prompt_counting.txt  vqa_prompt_long.txt  vqa_prompt_short.txt
assets/question_templates/: cyclic.json  metadata.json
assets/question_templates/CycliST_1.0_templates/: counting_cycles.json  counting_frequency.json  counting_occurence.json  cycle_representative_clockwise.json  cycle_representative_orbit.json  cycle_representative_transition.json  existential_descriptive_attributes.json  existential_descriptive_compare.json  existential_descriptive_relate.json  universal_descriptive_attributes.json  universal_descriptive_compare.json  universal_descriptive_relate.json
assets/question_templates/CycliST_1.0_templates_optional/: cycle_representative copy.json  existential_relate_compare.json  zero_hop.json
assets/shapes/: Cone.blend  Cube.blend  Cylinder.blend
cyclist/: __init__.py  cyclist.py  utility.py
cyclist/eval/: eval_README.md  eval_scene_understanding.py  eval_vqa.py  judge_vqa.ipynb  judge_vqa.py  judge_vqa_counting.ipynb
cyclist/eval/data/: dataloader.py  load_vid.py  model_wrapper.py
cyclist/eval/judge/: judge_eval_sun.ipynb  metrics.py  query_sglang.py
cyclist/eval/judge/examples/: llm_judge_su.ipynb  llm_judge_vqa.ipynb
cyclist/eval/utils/: gemini_upload_utils.py  intern_video_utils.py  load_env_vars.py  load_vid.py  upload_gemini_vid.py
cyclist/judge/: judge_scene_understanding.py  judge_vqa.py  metrics.py  query_sglang.py  vqa_results_counting.ipynb  vqa_results_counting_utils.py  vqa_results_descriptive.ipynb  vqa_results_descriptive_utils.py  vqa_results_representative.ipynb  vqa_results_representative_utils.py  vqa_results_scene_understanding.ipynb
cyclist/questions/: functional_program_vis_util.py  generate_questions.py  plot_json.py  question_engine.py  question_inspection.ipynb
cyclist/questions/handlers/: equality_handler.py  filter_handler.py  handler_utils.py  logical_handler.py  query_handler.py  relate_handler.py  same_handler.py  set_handler.py
cyclist/scene/: cycle.py  generator.py  renderer.py  validator.py
docs/: index.html
docs/static/css/: index.css
scripts/eval/: eval_scene_understanding.sh  eval_vqa.sh  eval_vqa_cycle_frequency.sh  upload_gemini.sh
scripts/questions/: question_gen.sh
scripts/scene/: bicycle.sh  extract_slide_show.py  linear_example.py  nightrider.sh  orbit_example.py  plot_relations.py  recolor_example.py  resize_example.py  rotate_example.py  test_scene.py  tricycle.sh  unicycle.sh  unicycle_cluttered.sh
