[build-system]
requires = ["setuptools>=42", "wheel"]  # Build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "cyclist"  
version = "0.1.0"  
description = "A CLEVR Video dataset for cyclic transformations."

readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }  # Replace with your license type
requires-python = ">=3.6"  # Specify the minimum Python version required
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core dependencies required for the package to function
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.48.3",
    #"peft",#==0.11.1
    "tokenizers",
    "evaluate",
    "sentencepiece",
    "shortuuid",
    "bitsandbytes",
    "pydantic", 
    "markdown2[all]",
    "numpy",
    'av',
    'python-dotenv',
    'wandb',
]

[project.optional-dependencies]
# Optional groups of dependencies

advanced_ml = [
    # Advanced ML tools and libraries
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.6.13", 
    "deepspeed",
    "accelerate", 
    "flash-attn",
]

api = [
    # Google generative AI tools
    'google-genai',
    'openai'
]

sglang = [
    # SGLang runtime and development tools
    "sglang[all]==0.4.1",
    #'flashinfer-python @ https://flashinfer.ai/whl/cu124/torch2.5/',
]


[tool.setuptools.packages.find]
where = ["cyclist"]  # Adjust if your package is in a different directory (e.g., 'src')

[tool.setuptools]
include-package-data = true  # Include additional files specified in MANIFEST.in

