[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclist"
version = "1.0"
description = "CycliST: A Video Language Model Benchmark for Reasoning on Cyclical State Transitions"
readme = "README.md"
authors = [
    { name = "Simon Kohaut, Daniel Ochs, Shun Zhang", email = "simon.kohaut@cs.tu-darmstadt.de" }
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD Software License",
    "Operating System :: OS Independent",
]

# Scene generation and question generation
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "opencv-python",
    "python-dotenv",
    "rtpt",
    "tqdm",
    "matplotlib",
    "networkx",
]

[project.optional-dependencies]

# VLM forward pass (eval_vqa.py) and SGLang judging (judge_vqa.py)
# Also installs API clients: google-genai for Gemini, openai as the SGLang HTTP client
# torch/torchvision/torchaudio are intentionally omitted here — install them first
# with the correct CUDA index URL (see environment.yml or install_packages.sh)
eval = [
    "transformers==4.48.3",
    "tokenizers",
    "evaluate",
    "sentencepiece",
    "shortuuid",
    "bitsandbytes",
    "accelerate",
    "peft",
    "Pillow",
    "markdown2[all]",
    "av",
    "requests",
    "wandb",
    "pandas",
    "seaborn",
    "google-genai",
    "openai",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm>=0.9.2",
]

# Development and testing tools
dev = [
    "black",
    "ruff",
    "hypothesis",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cyclist = ["py.typed"]
